Starting on list comprehesions

--- a/02-Python Statements/02-if, elif, and else Statements.ipynb
+++ b/02-Python Statements/02-if, elif, and else Statements.ipynb
@@ -193,6 +193,116 @@
     "\n",
     "It is important to keep a good understanding of how indentation works in Python to maintain the structure and order of your code. We will touch on this topic again when we start building out functions!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " color = 'red'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The color is still red\n"
+     ]
+    }
+   ],
+   "source": [
+    "if color == 'blue':\n",
+    "    print('The color is blue')\n",
+    "else:\n",
+    "    print('The color is still red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person1 = 'Jay'\n",
+    "person2 = 'Isis'\n",
+    "person3 = 'Whitney'\n",
+    "\n",
+    "person = person1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Jay you are the man\n"
+     ]
+    }
+   ],
+   "source": [
+    "if person == person1:\n",
+    "    print('Jay you are the man')\n",
+    "elif person == person2: \n",
+    "    print('Isis is stinky')\n",
+    "else:\n",
+    "    print('Wassup sucka')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Bow to Jay\n"
+     ]
+    }
+   ],
+   "source": [
+    "if person == person1 or person == person2:\n",
+    "    print('Bow to Jay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Error.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if person == person1 and person == person2:\n",
+    "    print('Hi jay and isis')\n",
+    "else:\n",
+    "    print('Error.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -211,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
