Working through functions test

--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -42,23 +42,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    pass"
+    "    if a%2==0 and b%2==0:\n",
+    "        return min(a,b)\n",
+    "    # elif a%2==0 and b%2==0 and a < b:\n",
+    "    #     return b\n",
+    "    elif a%2!=0 or b%2!= 0:\n",
+    "        return max(a,b)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 363
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,4)"
@@ -66,11 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 364,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 364
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,5)"
@@ -87,23 +115,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    pass"
+    "    words = text.split()\n",
+    "    return words[0][0] == words[1][0]\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 366
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Levelheaded Llama')"
@@ -111,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 367,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 367
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Crazy Kangaroo')"
@@ -134,23 +186,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 368,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
-    "    pass"
+    "  return n1+n2 == 20 or n1==20 or n2==20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 369,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 369
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(20,10)"
@@ -158,14 +221,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 370,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 370
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 371
+    }
+   ],
+   "source": [
+    "makes_twenty(10,10)"
    ]
   },
   {
@@ -188,23 +282,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 372,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Slices the name in two and capitalizes each side and then concatenates the string back together in the return statement\n",
     "def old_macdonald(name):\n",
-    "    pass"
+    "    if len(name) > 3:\n",
+    "        return name[:3].capitalize() + name[3:].capitalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 373,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'MacDonald'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 373
+    }
+   ],
    "source": [
     "# Check\n",
     "old_macdonald('macdonald')"
@@ -232,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 374,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 375,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 376,
    "metadata": {
     "collapsed": true
    },
@@ -282,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 377,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 378,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 379,
    "metadata": {
     "collapsed": true
    },
@@ -318,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 380,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 381,
    "metadata": {
     "collapsed": true
    },
@@ -362,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 382,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 383,
    "metadata": {
     "collapsed": true
    },
@@ -386,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 384,
    "metadata": {
     "collapsed": true
    },
@@ -407,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 385,
    "metadata": {
     "collapsed": true
    },
@@ -419,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 386,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 387,
    "metadata": {
     "collapsed": true
    },
@@ -453,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 388,
    "metadata": {
     "collapsed": true
    },
@@ -465,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 389,
    "metadata": {
     "collapsed": true
    },
@@ -477,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 390,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 391,
    "metadata": {
     "collapsed": true
    },
@@ -512,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 392,
    "metadata": {
     "collapsed": true
    },
@@ -524,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 393,
    "metadata": {
     "collapsed": true
    },
@@ -536,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 394,
    "metadata": {
     "collapsed": true
    },
@@ -548,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 395,
    "metadata": {
     "collapsed": true
    },
@@ -578,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 396,
    "metadata": {
     "collapsed": true
    },
@@ -590,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 397,
    "metadata": {
     "collapsed": true
    },
@@ -602,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 398,
    "metadata": {
     "collapsed": true
    },
@@ -614,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 399,
    "metadata": {
     "collapsed": true
    },
@@ -636,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 400,
    "metadata": {
     "collapsed": true
    },
@@ -649,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 401,
    "metadata": {
     "collapsed": true
    },
@@ -677,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 402,
    "metadata": {
     "collapsed": true
    },
@@ -689,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {
     "collapsed": true
    },
@@ -722,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
